--- a/iris-api/Cargo.toml
+++ b/iris-api/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[rust.lint]
+unused = true
+
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+ollama-rs = "0.2.1"
 thiserror = "1.0.64"
-tokio = "1.40.0"
+tokio = { version = "1.40.0", features = ["full"] }
 
 [dev-dependencies]
 anyhow = "1.0.89"
