--- a/iris-api/Cargo.toml
+++ b/iris-api/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-[rust.lint]
-unused = true
-
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 ollama-rs = "0.2.1"
+qdrant-client = "1.12.1"
+serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "1.0.64"
 tokio = { version = "1.40.0", features = ["full"] }
 
