--- a/iris-api/Cargo.toml
+++ b/iris-api/Cargo.toml
@@ -7,4 +7,15 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+# -- Godot Bindings
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+# -- Ollama Bindings
+ollama-rs = "0.2.1"
+# -- Async
+tokio = { version = "1.41.1", features = ["full"] }
+# -- JSON Handling
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.132"
+# -- Others
+derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
+once_cell = "1.20.2"
