Compelted and Chat-History and Generation for LLM

--- a/iris-api/Cargo.toml
+++ b/iris-api/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["cdylib"]
 # -- Godot Bindings
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 # -- LLM Libraries
-ollama-rs = "0.2.1"
+ollama-rs = { version = "0.2.2", features = ["chat-history"] }
 # -- Async
 tokio = { version = "1.41.1", features = ["full"] }
 # -- JSON Handling
