--- a/iris-gen/Cargo.toml
+++ b/iris-gen/Cargo.toml
@@ -12,3 +12,10 @@ godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 
 # Error Handling Library
 thiserror = "2.0.11"
+
+# Async Library
+tokio = { version = "1.43.0", features = ["full"] }
+
+# Serialization and Deserialization Libraries
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
