--- a/iris-gen/Cargo.toml
+++ b/iris-gen/Cargo.toml
@@ -10,8 +10,8 @@ crate-type = ["cdylib"]
 # Godot API Library to Interact with Godot
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 
-# Error Handling Library
-thiserror = "2.0.11"
+# Library to Interact with Ollama
+ollama-rs = "0.2.4"
 
 # Async Library
 tokio = { version = "1.43.0", features = ["full"] }
@@ -19,3 +19,6 @@ tokio = { version = "1.43.0", features = ["full"] }
 # Serialization and Deserialization Libraries
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
+
+# Error Handling Library
+thiserror = "2.0.11"
