--- a/.github/workflows/iris-test.yml
+++ b/.github/workflows/iris-test.yml
@@ -33,8 +33,8 @@ jobs:
         run: cargo build --verbose
         working-directory: ./iris-gen
 
-      - name: Run tests
-        run: cargo test --verbose
+      - name: Run unit tests only
+        run: cargo test --lib --verbose
         working-directory: ./iris-gen
 
       - name: Run Clippy (Linting)
