--- a/.github/workflows/iris-test.yml
+++ b/.github/workflows/iris-test.yml
@@ -19,11 +19,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install sccache
+        run: |
+          curl -L https://github.com/mozilla/sccache/releases/latest/download/sccache-$(uname -m)-unknown-linux-musl.tar.gz | tar xz
+          mv sccache-*/sccache ~/.cargo/bin/
+
+      - name: Use sccache
+        run: echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
 
       - name: Cache Cargo dependencies
         uses: Swatinem/rust-cache@v2
+
+      - name: Cache Cargo build artifacts
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin
+            target
+          key: rust-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            rust-${{ runner.os }}-
 
       - name: List directory contents (debugging)
         run: ls -la
@@ -33,8 +51,8 @@ jobs:
         run: cargo build --verbose
         working-directory: ./iris-gen
 
-      - name: Run unit tests only
-        run: cargo test --lib --verbose
+      - name: Run unit tests only (ignore integration tests)
+        run: cargo test --lib --verbose -- --test-threads=4
         working-directory: ./iris-gen
 
       - name: Run Clippy (Linting)
