--- a/.github/workflows/iris-test.yml
+++ b/.github/workflows/iris-test.yml
@@ -19,18 +19,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install sccache
-        run: |
-          SCCACHE_VERSION="0.7.5"  # Replace with the latest version
-          ARCH=$(uname -m)
-          if [ "$ARCH" = "x86_64" ]; then ARCH="x86_64"; else ARCH="aarch64"; fi
-          curl -L -o sccache.tar.gz "https://github.com/mozilla/sccache/releases/download/v${SCCACHE_VERSION}/sccache-${SCCACHE_VERSION}-${ARCH}-unknown-linux-musl.tar.gz"
-          tar -xzf sccache.tar.gz
-          mv sccache-*/sccache ~/.cargo/bin/
-          rm -rf sccache.tar.gz sccache-*
+      - name: Install sccache (faster builds)
+        run: cargo install sccache
 
       - name: Use sccache
-        run: echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
+        run: echo "RUSTC_WRAPPER=$(which sccache)" >> $GITHUB_ENV
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@stable
