--- a/crates/iris_gen/Cargo.toml
+++ b/crates/iris_gen/Cargo.toml
@@ -8,8 +8,9 @@ ollama-rs = { version = "0.2.6", features = ["tool-implementations"] }
 ollama-rs-macros = "0.2.6"
 reqwest = "0.12.12"
 schemars = "0.8.22"
-serde = { version = "1.0.218", features = ["derive"] }
 tokio = { version = "1.43.0", features = ["full"] }
 
 thiserror.workspace = true
+serde = "1.0.219"
+
 
