--- a/crates/iris_godot/Cargo.toml
+++ b/crates/iris_godot/Cargo.toml
@@ -17,3 +17,5 @@ godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 thiserror.workspace = true
 bevy_ecs = "0.15.3"
 tokio = { version = "1.44.1", features = ["full"] }
+serde = "1.0.219"
+serde_json = "1.0.140"
