--- a/crates/iris_utils/Cargo.toml
+++ b/crates/iris_utils/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 thiserror.workspace = true
 tokio = { version = "1.44.0", features = ["full"] }
