--- a/crates/iris_gen/Cargo.toml
+++ b/crates/iris_gen/Cargo.toml
@@ -9,8 +9,9 @@ ollama-rs-macros = "0.2.6"
 reqwest = "0.12.12"
 schemars = "0.8.22"
 tokio = { version = "1.43.0", features = ["full"] }
+serde = "1.0.219"
+qdrant-client = "1.13.0"
 
 thiserror.workspace = true
-serde = "1.0.219"
 
 
