--- a/crates/iris_godot/Cargo.toml
+++ b/crates/iris_godot/Cargo.toml
@@ -19,3 +19,4 @@ bevy_ecs = "0.15.3"
 tokio = { version = "1.44.1", features = ["full"] }
 serde = "1.0.219"
 serde_json = "1.0.140"
+ollama-rs = "0.3.0"
