--- a/crates/iris_gen/Cargo.toml
+++ b/crates/iris_gen/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
 ollama-rs = { version = "0.3.0", features = ["tool-implementations"] }
 ollama-rs-macros = "0.2.6"
 reqwest = "0.12.12"
